--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.11.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
